# provenir

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
assets/: generate_social_preview.py
benchmarks/: smoke_benchmark.py
changelog/: index.html
concepts/: index.html
dashboard/: app.py  requirements.txt
docs/: api.md  changelog.md  concepts.md  index.md  installation.md  quickstart.md
docs/guides/: acquisition-package.md  benchmarks.md  dsse-signing.md  flywheel.md  governance.md  lineage-signing.md  merging.md  rag.md  regulation-as-code.md  reward-validity.md  rlaif.md  supply-chain-scan.md  tim-detection.md  trust-layer.md  verifier-reliability.md
examples/: acquisition_demo.py  adapter_merging.py  art53_evidence_demo.py  basic_sft.py  cyclonedx_export_demo.py  e2e_demo.py  lineage_demo.py  loop_doctor_and_agents.py  rag_dataset.py  reward_validity_demo.py  rhbench_demo.py  rlaif_pipeline.py  sample_config.yaml  sigstore_dsse_demo.py  supply_chain_scan_demo.py  tim_demo.py  trust_layer.py  verifier_reliability_demo.py
guides/acquisition-package/: index.html
guides/benchmarks/: index.html
guides/dsse-signing/: index.html
guides/flywheel/: index.html
guides/governance/: index.html
guides/lineage-signing/: index.html
guides/merging/: index.html
guides/rag/: index.html
guides/regulation-as-code/: index.html
guides/reward-validity/: index.html
guides/rlaif/: index.html
guides/supply-chain-scan/: index.html
guides/tim-detection/: index.html
guides/trust-layer/: index.html
guides/verifier-reliability/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
src/provenir/: __init__.py
src/provenir/adapters/: __init__.py  hub.py  merging.py  registry.py
src/provenir/alerts/: __init__.py  webhook.py
src/provenir/bench/: __init__.py
src/provenir/cli/: main.py
src/provenir/core/: __init__.py  abstractions.py  config.py  manifest.py
src/provenir/data/: __init__.py  curriculum.py  dataset.py  flywheel.py  quality.py  rag_generator.py  templates.py
src/provenir/environments/: __init__.py  agentic.py  base.py  registry.py  reliability.py  reward_validity.py  sandbox.py  tasks.py  tim.py  verifiers.py
src/provenir/eval/: __init__.py  benchmarks.py  canary.py  contamination.py  harness.py  judge.py  judge_calibration.py  metrics.py  rag_metrics.py
src/provenir/governance/: __init__.py  acquisition.py  audit.py  bom.py  export.py  hub_verify.py  lineage.py  model_cards.py  passport.py  pii.py  promotion_gate.py  rag_corpus.py  (+5 more)
tests/: test_acquisition.py  test_adapter_registry.py  test_agentic.py  test_alerts.py  test_backend_registry.py  test_benchmarks.py  test_benchmarks_and_model_cards.py  test_cli_governance.py  test_cli_new_commands.py  test_config_extended.py  test_contamination.py  test_core_config.py  test_curriculum.py  test_data_quality_and_cost.py  test_environments.py  test_eval_callback.py  test_eval_harness.py  test_eval_metrics.py  test_export.py  test_flight_recorder.py  test_flywheel.py  test_governance.py  test_grpo_learner.py  test_hub.py  test_hub_passport.py  test_hub_verify.py  test_judge.py  test_judge_calibration.py  test_lineage.py  test_loop_doctor.py  test_merging.py  test_observability.py  test_passport.py  test_peft.py  test_pii_scanning.py  test_promotion_gate.py  test_provenance.py  test_rag_corpus.py  test_rag_generator.py  test_rag_metrics.py  (+24 more)
tests/fixtures/: sample.jsonl
(+61 files in other folders)
